html and css created

--- a/index.html
+++ b/index.html
@@ -9,7 +9,42 @@
 <body>
     <div class="franchise">
         <div class="franchise-up">
-            
+            <div class="franchise-up">
+                <div class="franchise-content">
+                    <h2>salt and pepper</h2>
+                    <h2>express franchise</h2>
+                </div>
+                <div class="middle-images">
+                <div class="middle-1">
+                   <div> <img src="./images/img1.jpg" alt="image"></div>
+                   <div class="1-content">
+                    <small>sarghoda</small>
+                    <h1>Salt'n Pepper Express</h1>
+                    <p>Opposite Sargodha Arts Council Babar Road</p>
+                    <button>get directions</button>
+                   </div>
+                </div>
+                <div class="middle-1">
+                      <div> <img src="./images/img1.jpg" alt="image"></div>
+                      <div class="1-content">
+                    <small>jhelum</small>
+                    <h1>Salt'n Pepper Express</h1>
+                    <p>Opposite Sargodha Arts Council Babar Road</p>
+                    <button>get directions</button>
+                   </div>
+                </div>
+                 <div class="middle-1">
+                <div> <img src="./images/img1.jpg" alt="image"></div>
+                     <div class="1-content">
+                        <small>faisal town</small>
+                    <h1>Salt'n Pepper Express</h1>
+                    <p>Opposite Sargodha Arts Council Babar Road</p>
+                    <button>get directions</button>
+                     </div>
+                    
+                   </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
